--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.css
@@ -4,6 +4,10 @@
 	background-color: var(--ov-light-dark-color);
 }
 
+#layout-container {
+	display: block !important;
+}
+
 h4 {
 	margin-bottom: 1px;
 	font-weight: bold;
