--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
-	<div fxFlex.gt-sm="65%" fxFlex.lt-md="55%" fxLayoutAlign="center center">
+	<div fxFlex.gt-sm="65%" fxFlex.lt-md="55%" fxLayoutAlign="center center" id="layout-container">
 		<ov-layout>
 			<ng-template #stream let-stream>
 				<ov-stream [stream]="stream" [displayParticipantName]="false" [settingsButton]="false"></ov-stream>
