--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -1,40 +1,40 @@
 <mat-toolbar id="toolbar" role="heading" fxLayout fxLayoutAlign="center" fxLayoutGap="10px">
 	<div fxFlex="20%" fxLayoutAlign="start center">
-		<div id="img-container">
+		<div id="info-container">
 			<img *ngIf="!isMinimal && showLogo" id="branding-logo" src="assets/images/logo.png" ovLogo />
-			<span id="session-title" *ngIf="!isMinimal && session && session.sessionId && showSessionName">{{ session.sessionId }}</span>
+			<span id="session-name" *ngIf="!isMinimal && session && session.sessionId && showSessionName">{{ session.sessionId }}</span>
 		</div>
 	</div>
 	<div fxFlex="60%" fxFlexOrder="2" fxLayoutAlign="center center" id="media-buttons-container">
 		<!-- Microphone button -->
 		<button
-			id="navMicrophoneButton"
+			id="mic-btn"
 			mat-icon-button
 			(click)="toggleMicrophone()"
 			[disabled]="isConnectionLost || !hasAudioDevices"
 			[class.warn-btn]="!isWebcamAudioActive"
 		>
-			<mat-icon *ngIf="isWebcamAudioActive" matTooltip="Mute your audio">mic</mat-icon>
-			<mat-icon *ngIf="!isWebcamAudioActive" matTooltip="Unmute your audio">mic_off</mat-icon>
+			<mat-icon *ngIf="isWebcamAudioActive" matTooltip="Mute your audio" id="mic">mic</mat-icon>
+			<mat-icon *ngIf="!isWebcamAudioActive" matTooltip="Unmute your audio" id="mic_off">mic_off</mat-icon>
 		</button>
 
 		<!-- Camera button -->
 		<button
-			id="navCameraButton"
+			id="camera-btn"
 			mat-icon-button
 			(click)="toggleCamera()"
 			[disabled]="isConnectionLost || !hasVideoDevices"
 			[class.warn-btn]="!isWebcamVideoActive"
 		>
-			<mat-icon *ngIf="isWebcamVideoActive" matTooltip="Mute your cam">videocam</mat-icon>
-			<mat-icon *ngIf="!isWebcamVideoActive" matTooltip="Unmute your cam">videocam_off</mat-icon>
+			<mat-icon *ngIf="isWebcamVideoActive" matTooltip="Mute your cam" id="videocam">videocam</mat-icon>
+			<mat-icon *ngIf="!isWebcamVideoActive" matTooltip="Unmute your cam" id="videocam_off">videocam_off</mat-icon>
 		</button>
 
 		<!-- Screenshare button -->
 		<button
 			mat-icon-button
 			*ngIf="!isMinimal && showScreenshareButton"
-			id="navScreenButton"
+			id="screenshare-btn"
 			(click)="toggleScreenShare()"
 			[disabled]="isConnectionLost"
 			[class.active-btn]="isScreenShareActive"
@@ -46,6 +46,7 @@
 		<!-- Fullscreen button -->
 		<button
 			mat-icon-button
+			id="fullscreen-btn"
 			*ngIf="!isMinimal && showFullscreenButton"
 			(click)="toggleFullscreen()"
 			[disabled]="isConnectionLost"
@@ -69,6 +70,7 @@
 		<!-- Default participants button -->
 		<button
 			mat-icon-button
+			id="participants-panel-btn"
 			*ngIf="!isMinimal && showParticipantsPanelButton"
 			matTooltip="Show articipants"
 			(click)="toggleParticipantsPanel()"
@@ -81,6 +83,7 @@
 		<!-- Default chat button -->
 		<button
 			mat-icon-button
+			id="chat-panel-btn"
 			*ngIf="!isMinimal && showChatPanelButton"
 			(click)="toggleChatPanel()"
 			[disabled]="isConnectionLost"
