openvidu-testapp: add class identifiers to HTML components

--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -1,6 +1,6 @@
 <div class="div-wrapper">
 
-  <div>
+  <div class="config-half">
     <mat-card class="join-card">
 
       <mat-card-content>
@@ -111,7 +111,7 @@
     </mat-card>
   </div>
 
-  <div *ngIf="session">
+  <div class="session-half" *ngIf="session">
     <mat-card class="session-card">
       <div class="session-card-header">
         <div class="session-card-inner">
