--- a/openvidu-components-angular/src/doc/style.css
+++ b/openvidu-components-angular/src/doc/style.css
@@ -48,7 +48,8 @@ code {
  nav a[href*="license.html"],
  nav a[href*="properties.html"],
  nav a[href*="overview.html"],
- nav a[href*="index.html"] {
+ nav a[href*="index.html"],
+ section[data-compodoc="block-accessors"] {
 	display: none !important;
 }
 
@@ -69,12 +70,11 @@ code {
 }
 
 .warn-container, .info-container {
-	display: table;
     border-radius: 5px;
     width: 100%;
-    margin-top: 30px;
-    margin-bottom: 25px;
-    padding: 5px 0 5px 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 10px;
 }
 
 .info-container > span, .warn-container >span {
