openvidu-components: Updated styles name variables

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/avatar-profile/avatar-profile.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/avatar-profile/avatar-profile.component.css
@@ -10,7 +10,7 @@
     height: 70px;
     width: 70px;
 	border-radius: var(--ov-video-radius);
-	border: 2px solid var(--ov-light-color);
+	border: 2px solid var(--ov-text-color);
 	color: #000000;
 }
 
