--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -1,7 +1,7 @@
 #toolbar {
 	height: 100%;
 	background-color: transparent;
-	color: var(--ov-light-color);
+	color: var(--ov-text-color);
 }
 
 .buttonsContainer {
@@ -46,7 +46,7 @@
 }
 
 #branding-logo {
-	background-color: var(--ov-dark-color);
+	background-color: var(--ov-secondary-color);
 	border-radius: var(--ov-panel-radius);
 	max-width: 35px;
 	max-height: 35px;
