--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -9,21 +9,21 @@
 	padding: 0px;
 	position: absolute;
 	z-index: 999;
-	border-radius: var(--ov-panel-radius);
-	color: #ffffff;
+	border-radius: var(--ov-video-radius);
+	color: var(--ov-text-color);
 	font-family: 'Roboto','RobotoDraft',Helvetica,Arial,sans-serif;
   }
   .nicknameContainer {
 	background-color: var(--ov-secondary-color);
 	padding: 5px;
-	color: #ffffff;
+	color: var(--ov-text-color);
 	font-weight: bold;
-	border-radius: var(--ov-panel-radius);
+	border-radius: var(--ov-video-radius);
   }
 
   #nickname-input-container {
-	background-color:  #0000005e;
-	border-radius: var(--ov-panel-radius);
+	background-color:  var(--ov-secondary-color);
+	border-radius: var(--ov-video-radius);
 
   }
 
@@ -78,7 +78,7 @@
   }
 
   .status-icons button, #settings-container button {
-	color: #ffffff;
+	color: var(--ov-text-color);
 	width: 26px;
 	height: 26px;
 	margin: 5px;
@@ -102,7 +102,7 @@
   }
 
   #settings-container button {
-	background-color: var(--ov-dark-color);
+	background-color: var(--ov-secondary-color);
   }
 
   /* Contains the video element, used to fix video letter-boxing */
