--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -106,10 +106,10 @@
   }
 
   /* Contains the video element, used to fix video letter-boxing */
-  .OT_widget-container {
+  .OV_stream {
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: relative;
 	overflow: hidden;
 	background-color: #000000;
 	border-radius: var(--ov-video-radius);
