openvidu-components: Added directive examples and clean testapp
- Clean test components
- Avoid using backend in development

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -8,8 +8,10 @@
 	(onToolbarFullscreenButtonClicked)="onToolbarFullscreenButtonClicked()"
 	(onToolbarParticipantsPanelButtonClicked)="onToolbarParticipantsPanelButtonClicked()"
 	(onToolbarChatPanelButtonClicked)="onToolbarChatPanelButtonClicked()"
-	[prejoin]="false"
+	[minimal]="false"
 >
+
+
 
 <!-- <div *ovParticipantPanelItemElements>
 	<p>EXTRA INFO</p>
