openvidu-components: Allowed external panels
- Allowed injecting external panels and exported the panel service for toggling panels and subscribe to the panel status
- Renamed menu to panel
- Updated docs

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/panel.component.html
@@ -9,4 +9,9 @@
 	<ng-container *ngTemplateOutlet="participantsPanelTemplate"></ng-container>
 </ng-container>
 
+<!-- External additional panels  -->
+<ng-container *ngIf="additionalPanelsTemplate && isExternalPanelOpened">
+	<ng-container *ngTemplateOutlet="additionalPanelsTemplate"></ng-container>
+</ng-container>
+
 
