openvidu-components: Updated styles

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/chat-panel/chat-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/chat-panel/chat-panel.component.css
@@ -31,6 +31,11 @@
 	font-size: 12px;
 }
 
+.text-info {
+	margin: 3px;
+
+}
+
 .messages-container {
 	display: block !important;
 	overflow-y: auto;
